# airas-test

./: README.md  pyproject.toml
.research/latex/mdpi/: main.tex
config/: config.yaml
config/runs/comparative-1-transformer80m-ccdv/: arxiv-summarization.yaml  pubmed-summarization.yaml
config/runs/comparative-2-transformer80m-ccdv/: arxiv-summarization.yaml  pubmed-summarization.yaml
config/runs/comparative-3-transformer80m-ccdv/: arxiv-summarization.yaml  pubmed-summarization.yaml
config/runs/proposed-transformer80m-ccdv/: arxiv-summarization.yaml  pubmed-summarization.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
